# encomsys

./: .gitignore  CMakeLists.txt  README.md  SConstruct  compile.sh  run.sh
src/: CMakeLists.txt  encomsys.cpp  encomsys.hpp  handle.hpp  holey_vec.cpp  holey_vec.hpp  main.cpp  main.hpp  ref.hpp  relation.hpp
src/util/: index_vector.cpp  index_vector.hpp  types.hpp
tests/: .ycm_extra_conf.py  CMakeLists.txt  holey_vec_test.cpp  index_vec_test.cpp  main_test.cpp  relation_test.cpp  rudi_example.cpp
